--- a/homepage/templates/homepage/home.html
+++ b/homepage/templates/homepage/home.html
@@ -176,12 +176,12 @@
         </div>
       </a>
         {% endfor %}
-      </div>
+    
         <!-- Footer -->
-      <footer class="mt-auto text-center text-black-50 ">
+      <footer class="d-flex mt-auto mx-auto text-center text-black-50 ">
         <p>&copy;<a href="https://www.Test2Impress.be/" class="text-black">Test2Impress</a> - {% now "Y" %}</p>
       </footer>
-    
+    </div>
 
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>    
