--- a/homepage/templates/homepage/menu.html
+++ b/homepage/templates/homepage/menu.html
@@ -17,20 +17,33 @@
 
     <!-- Custom styles for this template -->
     <link href="https://getbootstrap.com/docs/4.0/examples/product/product.css" rel="stylesheet">
+
+    <!-- FontAwesome Kit -->
+    <script src="https://kit.fontawesome.com/cba82e9257.js" crossorigin="anonymous"></script>
 <style>
 
 /* Menucolors */
-    .bgblue {
-        background: #2c3540;
+    
+    .bglightyellow {
+        background: #eff2d8;
+      }
+
+    .bgyellow {
+        background: #d4d9c1;
       }
    
     .bggreen {
         background: #7d8c84;
       }
-   
-    .backgroundbottomleft {
+
+    .bgblue {
         background: #2c3540;
       }
+    
+    .bgdarkblue {
+        background: #04050d;
+      }
+
 /* Textcolors */
     .lightyellow {
         color:#eff2d8;
@@ -65,27 +78,82 @@
         color: #111;
       }
     
-    .image {
+    .imageleftphone {
+        border-style: solid;
+        border-width: 3px;
+        border-color: black;
         width:80%;
         height:80%;
-        object-fit: contain;
-        padding-top: 5px;
+        object-fit: fill;
+        margin-top: 50px;
+        z-index: 0;
+    }
+
+    .imagerightphone {
+        border-style: solid;
+        border-width: 3px;
+        border-color: black;
+        width:80%;
+        height:80%;
+        z-index: 0;
+        margin-top: -15vh;
+        object-fit:fill;
+        position:inherit;
+    }
+
+    .phoneicon {
+      font-size:10vw;
+      color: green;
+      z-index: 1;
+      left:10%;
+      top:60%;
+      position:sticky;
+      z-index:1;
+    }
+
+    .button {
+      color:#04050d;
+      background-color:#eff2d8;
+      border-color:#2c3540;
+      box-shadow: 2px 5px 5px #2c3540;
+    }
+
+    .button:hover {
+      color:#04050d;
+      background-color:#d4d9c1 ;
+      border-color:#2c3540;
+      box-shadow: 5px 15px 20px #2c3540;
+    }
+
+    .button:active {
+      color:#eff2d8;
+      background-color:#2c3540 ;
+      border-color:#2c3540;
+      box-shadow: 5px 15px 20px #eff2d8;
+      filter: saturate(150%);
+      transform: translateY(3px);
+    }
+
+    .button:focus {
+      color:#04050d;
+      background-color:#d4d9c1 ;
+      border-color:#7d8c84;
+      box-shadow: 5px 15px 20px #2c3540;
     }
 
 
 </style>
 </head>
   <body>
-      {% for homes in homes.all %}
-    <nav class="navbar px-5 navbar-expand-lg bgblue navbar-dark">
+    <nav class="navbar px-5 navbar-expand-lg bgdarkblue navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img class="navbarlogo" src="{{home.logo.url}}" height=50px><b>Test2Impress</b></a>
+            <a class="navbar-brand" href="{% url 'menu' %}"><img class="navbarlogo px-3" src="{% static 'Webistebg.gif'%}" height=40px><b>Test2Impress</b></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-auto">
-                    <a class="nav-link px-2" aria-current="page" href="{% url 'home' %}">Home</a>
+                    <a class="nav-link px-2" aria-current="page" href="{% url 'home' %}">Logo</a>
                     <a class="nav-link px-2" href="#">Who are we</a>
                     <a class="nav-link active px-2" href="#">What do we offer</a>
                     <a class="nav-link px-2" href="#">What did we do</a>
@@ -94,13 +162,12 @@
             </div>
         </div>
     </nav>
-    {% endfor %}
     <div class="bggreen position-relative overflow-hidden p-0 p-md-5 m-md-3 text-center">
       <div class="col-md-5 p-lg-5 mx-auto my-5">
-        <h1 class="display-4 font-weight-normal"><span class="lightyellow"><b>Test</b></span></h1>
+        <h1 class="display-4 font-weight-normal"><span class="lightyellow"><b>Test</b></span><span class="text-black-50">2Impress</span></h1>
         <p class="lead font-weight-normal">We <span class="lightyellow"><b>test</b></span> software: from websites to mainframe applications, from integrations to mobile solutions. Software testing is necessary because we all make mistakes and those can be expensive and potentially dangerous, harming you or your company’s reputation.</p>
         <p class="lead font-weight-normal">This is where <span class="lightyellow"><b>Test2Impress</b></span> steps in.</p>
-        <a class="darkblue btn btn-outline-secondary" href="#">Past Projects</a>
+        <a class="btn button" href="#">Past Projects</a>
       </div>
       <div class="product-device box-shadow d-none d-md-block"></div>
       <div class="product-device product-device-2 box-shadow d-none d-md-block"></div>
@@ -110,24 +177,24 @@
       
       <div class="bgblue mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-black overflow-hidden">
         <div class="my-3 py-3">
-          <h2 class="display-5"><span class="lightyellow"><b>Impress</b></span></h2>
+          <h2 class="display-5 text-black-50">Test2<span class="lightyellow"><b>Impress</b></span></h2>
           <p class="lead yellow"><span class="lightyellow"><b>Impress</b></span> your customers with a unique website for all devices & browsers!</p>
-          <p class="lead yellow">Click on the cell phone below to see some examples.</p>
+          <p class="lead yellow">Click on the website below to see some examples.</p>
         </div>
         <a href="#">
-            <div class="bg-light box-shadow mx-auto mb-0" style="width: 60%; height: 100%; border-radius: 21px 21px 0 0;"><img class="image" src="{% static 'Miniwebsite.jpg' %}"></div>
+            <div class="bg-light box-shadow mx-auto mb-0" style="width: 60%; height: 80%; border-radius: 21px 21px 0 0;"><img class="imageleftphone" src="{% static 'Miniwebsite.jpg' %}"></div>
         </a>
       </div>
     
       <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
         <div class="my-3 py-3">
-          <h2 class="darkblue display-5">Test2<b>I</b>mpress</h2>
-          <p class="lead">Who are we?</p>
+          <h2 class="darkblue display-5"><b>Test2Impress</b></h2>
+          <p class="lead">Found what you're looking for? Let's get in touch!</p>
           <br/>
           <br/>
         </div>
         <a href="#">
-        <div class="bg-dark box-shadow mx-auto mb-0" style="width: 60%; height: 100%; border-radius: 21px 21px 0 0;"><img class="image" src="{% static 'WhoAreWe2.jpg' %}"></div>
+        <div class="bg-dark box-shadow mx-auto mb-0" style="width: 60%; height: 80%; border-radius: 21px 21px 0 0;"><i class="phoneicon fas fa-phone-alt"></i><img class="imagerightphone" src="{% static 'Calling.jpeg' %}"></i> </div>
         </a>
       </div>
     </div>
